Adding patch 2026