@@ -1,9 +1,11 @@
 package nl.centric.innovation.local4local.unit;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.Mockito.lenient;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
@@ -11,16 +13,25 @@ import static org.mockito.Mockito.when;
 
 import lombok.SneakyThrows;
 import nl.centric.innovation.local4local.dto.MonthlyTransactionDto;
+import nl.centric.innovation.local4local.dto.MonthlyTransactionView;
 import nl.centric.innovation.local4local.dto.OfferTransactionInvoiceTenantDto;
+import nl.centric.innovation.local4local.dto.OfferTransactionInvoiceTenantView;
 import nl.centric.innovation.local4local.dto.OfferTransactionTableDto;
+import nl.centric.innovation.local4local.dto.OfferTransactionTableView;
 import nl.centric.innovation.local4local.dto.OfferTransactionTenantTableDto;
+import nl.centric.innovation.local4local.dto.OfferTransactionTenantTableView;
 import nl.centric.innovation.local4local.dto.OfferTransactionsGroupedDto;
+import nl.centric.innovation.local4local.dto.OfferTransactionsGroupedView;
+import nl.centric.innovation.local4local.dto.WorkingHoursCreateDto;
 import nl.centric.innovation.local4local.entity.DiscountCode;
 import nl.centric.innovation.local4local.entity.Offer;
 import nl.centric.innovation.local4local.entity.OfferTransaction;
 import nl.centric.innovation.local4local.entity.Role;
+import nl.centric.innovation.local4local.entity.Supplier;
 import nl.centric.innovation.local4local.entity.User;
 import nl.centric.innovation.local4local.enums.TimeIntervalPeriod;
+import nl.centric.innovation.local4local.exceptions.DtoValidateException;
+import nl.centric.innovation.local4local.exceptions.InvalidDateRangeException;
 import nl.centric.innovation.local4local.service.impl.OfferTransactionService;
 
 import nl.centric.innovation.local4local.service.impl.PrincipalService;
@@ -36,6 +47,7 @@ import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 
 import java.lang.reflect.Method;
+import java.math.BigDecimal;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.YearMonth;
@@ -67,6 +79,7 @@ class OfferTransactionServiceImplTests {
 
     @Mock
     private PrincipalService principalService;
+
 
     @Test
     void GivenSaveTransaction_WhenCalled_ThenVerifySave() {
@@ -149,34 +162,39 @@ class OfferTransactionServiceImplTests {
     void GivenSupplierId_WhenTransactionsExist_ThenReturnCorrectCount() {
         // Given
         UUID supplierId = UUID.randomUUID();
-        Integer month = 11;
-        Integer year = 2024;
+        LocalDateTime startDateTime = LocalDateTime.of(2024, 6, 1, 0, 0);
+        LocalDateTime endDateTime = LocalDateTime.of(2024, 6, 30, 23, 59, 59);
+        LocalDate startDate = LocalDate.of(2024, 6, 1);
+        LocalDate endDate = LocalDate.of(2024, 6, 30);
 
         // When
         when(principalService.getSupplierId()).thenReturn(supplierId);
-        when(offerTransactionRepository.countMonthYearTransactionsBySupplierId(supplierId, month, year)).thenReturn(5);
-        Integer result = offerTransactionService.countMonthYearTransactionsBySupplierId(month, year);
+        when(offerTransactionRepository.countIntervalTransactionsBySupplierId(eq(supplierId), any(LocalDateTime.class), any(LocalDateTime.class))).thenReturn(5);
+        Integer result = offerTransactionService.countIntervalTransactionsBySupplierId(startDate, endDate);
 
         // Then
         assertEquals(5, result);
-        verify(offerTransactionRepository, times(1)).countMonthYearTransactionsBySupplierId(supplierId, month, year);
+        verify(offerTransactionRepository, times(1)).countIntervalTransactionsBySupplierId(eq(supplierId), any(LocalDateTime.class), any(LocalDateTime.class));
     }
 
     @Test
     void GivenSupplierId_WhenNoTransactionsExist_ThenReturnZero() {
         // Given
         UUID supplierId = UUID.randomUUID();
-        Integer month = 11;
-        Integer year = 2024;
+
+        LocalDateTime startDate = LocalDateTime.of(2024, 6, 1, 0, 0);
+        LocalDateTime endDate = LocalDateTime.of(2024, 6, 30, 23, 59, 59);
+        LocalDate startDateN = LocalDate.of(2024, 6, 1);
+        LocalDate endDateN = LocalDate.of(2024, 6, 30);
 
         // When
         when(principalService.getSupplierId()).thenReturn(supplierId);
-        when(offerTransactionRepository.countMonthYearTransactionsBySupplierId(supplierId, month, year)).thenReturn(0);
-        Integer result = offerTransactionService.countMonthYearTransactionsBySupplierId(month, year);
+        when(offerTransactionRepository.countIntervalTransactionsBySupplierId(eq(supplierId), any(LocalDateTime.class), any(LocalDateTime.class))).thenReturn(0);
+        Integer result = offerTransactionService.countIntervalTransactionsBySupplierId(startDateN, endDateN);
 
         // Then
         assertEquals(0, result);
-        verify(offerTransactionRepository, times(1)).countMonthYearTransactionsBySupplierId(supplierId, month, year);
+        verify(offerTransactionRepository, times(1)).countIntervalTransactionsBySupplierId(eq(supplierId), any(LocalDateTime.class), any(LocalDateTime.class));
     }
 
     @Test
@@ -246,41 +264,62 @@ class OfferTransactionServiceImplTests {
     void GivenValidMonthYearAndPageable_WhenGetTransactionsByMonthAndYear_ThenReturnTransactions() {
         // Given
         UUID supplierId = UUID.randomUUID();
-        int month = 5;
-        int year = 2023;
+
+        LocalDateTime startDate = LocalDateTime.of(2024, 6, 1, 0, 0);
+        LocalDateTime endDate = LocalDateTime.of(2024, 6, 30, 23, 59, 59);
+        LocalDate startDateN = LocalDate.of(2024, 6, 1);
+        LocalDate endDateN = LocalDate.of(2024, 6, 30);
         int page = 0;
         int size = 10;
         Pageable pageable = PageRequest.of(page, size);
-        List<OfferTransactionTableDto> transactions = Arrays.asList(new OfferTransactionTableDto("12345", "John Doe", 100.0, "01/05/2023", "10:20"));
+
+        // Create a mocked projection record
+        OfferTransactionTableView transaction = mock(OfferTransactionTableView.class);
+
+        List<OfferTransactionTableView> transactions = List.of(transaction);
 
         // When
         when(principalService.getSupplierId()).thenReturn(supplierId);
-        when(offerTransactionRepository.findTransactionsByMonthAndYear(supplierId, month, year, pageable)).thenReturn(transactions);
-        List<OfferTransactionTableDto> result = offerTransactionService.getTransactionsByMonthAndYear(month, year, page, size);
+        when(offerTransactionRepository.findTransactionsByInterval(
+                eq(supplierId),
+                any(LocalDateTime.class),
+                any(LocalDateTime.class),
+                eq(pageable)))
+                .thenReturn(transactions);
+
+        List<OfferTransactionTableView> result =
+                offerTransactionService.getTransactionsInterval(startDateN, endDateN, page, size);
 
         // Then
         assertEquals(transactions, result);
-        verify(offerTransactionRepository, times(1)).findTransactionsByMonthAndYear(supplierId, month, year, pageable);
+        verify(offerTransactionRepository, times(1)).findTransactionsByInterval(
+                eq(supplierId),
+                any(LocalDateTime.class),
+                any(LocalDateTime.class),
+                eq(pageable));
     }
 
     @Test
     void GivenNoTransactionsExist_WhenGetTransactionsByMonthAndYear_ThenReturnEmptyList() {
         // Given
-        UUID supplierId = UUID.randomUUID();
-        int month = 5;
-        int year = 2023;
+        UUID supplierId = UUID.fromString("8e3ea9e1-4bf7-4ad7-85d9-ce5c98439cdd");
+
+        LocalDateTime startDate = LocalDateTime.of(2024, 6, 1, 0, 0);
+        LocalDateTime endDate = LocalDateTime.of(2024, 6, 30, 23, 59, 59);
+        LocalDate startDateN = LocalDate.of(2024, 6, 1);
+        LocalDate endDateN = LocalDate.of(2024, 6, 30);
         int page = 0;
         int size = 10;
         Pageable pageable = PageRequest.of(page, size);
 
         // When
         when(principalService.getSupplierId()).thenReturn(supplierId);
-        when(offerTransactionRepository.findTransactionsByMonthAndYear(supplierId, month, year, pageable)).thenReturn(Collections.emptyList());
-        List<OfferTransactionTableDto> result = offerTransactionService.getTransactionsByMonthAndYear(month, year, page, size);
+        when(offerTransactionRepository.findTransactionsByInterval(eq(supplierId), any(LocalDateTime.class), any(LocalDateTime.class), eq(pageable))).thenReturn(Collections.emptyList());
+        List<OfferTransactionTableView> result = offerTransactionService.getTransactionsInterval(startDateN, endDateN, page, size);
 
         // Then
         assertTrue(result.isEmpty());
-        verify(offerTransactionRepository, times(1)).findTransactionsByMonthAndYear(supplierId, month, year, pageable);
+        verify(offerTransactionRepository, times(1)).findTransactionsByInterval(eq(supplierId), any(LocalDateTime.class), any(LocalDateTime.class), eq(pageable));
     }
 
     @Test
@@ -292,34 +331,47 @@ class OfferTransactionServiceImplTests {
         user.setId(userId);
         user.setCreatedDate(userCreatedDate);
 
-        OfferTransactionsGroupedDto transaction1 = OfferTransactionsGroupedDto.builder()
-                .offerTitle("Test 1")
-                .supplierName("Centric")
-                .amount(100.0)
-                .offerType(null)
-                .createdDate("01/03/2024")
-                .build();
+        // Mock projection interface
+        OfferTransactionsGroupedView transactionView = Mockito.mock(OfferTransactionsGroupedView.class);
+        lenient().when(transactionView.getOfferTitle()).thenReturn("Test 1");
+        lenient().when(transactionView.getSupplierName()).thenReturn("Centric");
+        lenient().when(transactionView.getAmount()).thenReturn(100.0);
+        lenient().when(transactionView.getOfferType()).thenReturn(null); // or some OfferType if needed
+        // This string format must match what your service expects/parses
+        lenient().when(transactionView.getCreatedDate()).thenReturn("01/03/2024");
 
-        List<OfferTransactionsGroupedDto> mockedTransactions = List.of(transaction1);
+        List<OfferTransactionsGroupedView> mockedTransactions = List.of(transactionView);
 
         when(principalService.getUser()).thenReturn(user);
-        when(offerTransactionRepository.findOfferTransactionsForCitizen(eq(userId), Mockito.any(Pageable.class)))
+        when(offerTransactionRepository.findOfferTransactionsForCitizen(
+                eq(userId), Mockito.any(Pageable.class)))
                 .thenReturn(mockedTransactions);
 
         // When
-        Map<YearMonth, List<OfferTransactionsGroupedDto>> result = offerTransactionService.getUserTransactionsGrouped(0, 10);
+        Map<YearMonth, List<OfferTransactionsGroupedView>> result =
+                offerTransactionService.getUserTransactionsGrouped(0, 10);
 
         // Then
-        assertEquals(ChronoUnit.MONTHS.between(YearMonth.of(2024, 1), YearMonth.from(LocalDate.now())) + 1, result.size());
+        YearMonth start = YearMonth.of(2024, 1);
+        YearMonth now = YearMonth.from(LocalDate.now());
+        long monthsBetween = ChronoUnit.MONTHS.between(start, now) + 1;
+
+        assertEquals(monthsBetween, result.size());
+
         assertTrue(result.get(YearMonth.of(2024, 1)).isEmpty());
         assertTrue(result.get(YearMonth.of(2024, 2)).isEmpty());
         assertEquals(1, result.get(YearMonth.of(2024, 3)).size());
+
+        OfferTransactionsGroupedView dtoForMarch = result.get(YearMonth.of(2024, 3)).get(0);
+        assertEquals("Test 1", dtoForMarch.getOfferTitle());
+        assertEquals("Centric", dtoForMarch.getSupplierName());
+        assertEquals(100.0, dtoForMarch.getAmount());
     }
 
     @Test
     void GivenMonthlyPeriodAndMunicipalityAdmin_WhenGetTransactionStatsForPeriod_ThenReturnsCorrectStats() {
         // Given
-        UUID tenantId = UUID.randomUUID();
+        UUID tenantId = UUID.fromString("8e3ea9e1-4bf7-4ad7-85d9-ce5c98439cdd");
         User user = User.builder()
                 .role(Role.builder()
                         .name(Role.ROLE_MUNICIPALITY_ADMIN)
@@ -329,45 +381,58 @@ class OfferTransactionServiceImplTests {
         when(principalService.getTenantId()).thenReturn(tenantId);
         when(principalService.getUser()).thenReturn(user);
 
-        MonthlyTransactionDto existingStat = new MonthlyTransactionDto(LocalDateTime.now().getMonthValue(), 200.0);
+        int currentMonth = LocalDateTime.now().getMonthValue();
+        double totalAmount = 200.0;
+
+        MonthlyTransactionView existingStat = mock(MonthlyTransactionView.class);
+        when(existingStat.getMonth()).thenReturn(currentMonth);
+        when(existingStat.getTotalAmount()).thenReturn(totalAmount);
+
         when(offerTransactionRepository.sumTransactionsByMonthAndTenantIdSince(eq(tenantId), any(LocalDateTime.class)))
                 .thenReturn(List.of(existingStat));
 
         // When
-        List<MonthlyTransactionDto> result = offerTransactionService.getTransactionStatsForPeriod(TimeIntervalPeriod.MONTHLY);
+        List<MonthlyTransactionDto> result =
+                offerTransactionService.getTransactionStatsForPeriod(TimeIntervalPeriod.MONTHLY);
 
         // Then
         assertEquals(1, result.size());
-        assertEquals(existingStat.month(), result.get(0).month());
-        assertEquals(existingStat.totalAmount(), result.get(0).totalAmount());
+        assertEquals(existingStat.getMonth(), result.get(0).month());
+        assertEquals(existingStat.getTotalAmount(), result.get(0).totalAmount());
     }
 
     @Test
     void GivenQuarterlyPeriodAndMunicipalityAdmin_WhenGetTransactionStatsForPeriod_ThenFillsMissingMonths() {
         // Given
-        UUID tenantId = UUID.randomUUID();
+        UUID tenantId = UUID.fromString("8e3ea9e1-4bf7-4ad7-85d9-ce5c98439cdd");
         User user = User.builder()
                 .role(Role.builder()
                         .name(Role.ROLE_MUNICIPALITY_ADMIN)
                         .build())
                 .build();
         when(principalService.getTenantId()).thenReturn(tenantId);
-
-        MonthlyTransactionDto transaction = new MonthlyTransactionDto(LocalDateTime.now().getMonthValue(), 150.0);
         when(principalService.getUser()).thenReturn(user);
+
+        int currentMonth = LocalDateTime.now().getMonthValue();
+
+        MonthlyTransactionView transaction = mock(MonthlyTransactionView.class);
+        when(transaction.getMonth()).thenReturn(currentMonth);
+        when(transaction.getTotalAmount()).thenReturn(150.0);
+
         when(offerTransactionRepository.sumTransactionsByMonthAndTenantIdSince(eq(tenantId), any(LocalDateTime.class)))
                 .thenReturn(List.of(transaction));
 
         // When
-        List<MonthlyTransactionDto> result = offerTransactionService.getTransactionStatsForPeriod(TimeIntervalPeriod.QUARTERLY);
+        List<MonthlyTransactionDto> result =
+                offerTransactionService.getTransactionStatsForPeriod(TimeIntervalPeriod.QUARTERLY);
 
         // Then
         Set<Integer> quarterMonths = getExpectedQuarterMonths(LocalDateTime.now());
         assertEquals(quarterMonths.size(), result.size());
 
         for (MonthlyTransactionDto dto : result) {
-            if (dto.month().equals(transaction.month())) {
-                assertEquals(transaction.totalAmount(), dto.totalAmount());
+            if (dto.month().equals(transaction.getMonth())) {
+                assertEquals(transaction.getTotalAmount(), dto.totalAmount());
             } else {
                 assertEquals(0.0, dto.totalAmount());
             }
@@ -377,7 +442,7 @@ class OfferTransactionServiceImplTests {
     @Test
     void GivenYearlyPeriodAndMunicipalityAdmin_WhenGetTransactionStatsForPeriod_ThenReturnsAllMonths() {
         // Given
-        UUID tenantId = UUID.randomUUID();
+        UUID tenantId = UUID.fromString("8e3ea9e1-4bf7-4ad7-85d9-ce5c98439cdd");
         User user = User.builder()
                 .role(Role.builder()
                         .name(Role.ROLE_MUNICIPALITY_ADMIN)
@@ -387,20 +452,36 @@ class OfferTransactionServiceImplTests {
         when(principalService.getTenantId()).thenReturn(tenantId);
         when(principalService.getUser()).thenReturn(user);
 
-        MonthlyTransactionDto janTransaction = new MonthlyTransactionDto(1, 500.0);
-        MonthlyTransactionDto decTransaction = new MonthlyTransactionDto(12, 800.0);
+        MonthlyTransactionView janTransaction = mock(MonthlyTransactionView.class);
+        when(janTransaction.getMonth()).thenReturn(1);
+        when(janTransaction.getTotalAmount()).thenReturn(500.0);
+
+        MonthlyTransactionView decTransaction = mock(MonthlyTransactionView.class);
+        when(decTransaction.getMonth()).thenReturn(12);
+        when(decTransaction.getTotalAmount()).thenReturn(800.0);
 
         when(offerTransactionRepository.sumTransactionsByMonthAndTenantIdSince(eq(tenantId), any(LocalDateTime.class)))
                 .thenReturn(List.of(janTransaction, decTransaction));
 
         // When
-        List<MonthlyTransactionDto> result = offerTransactionService.getTransactionStatsForPeriod(TimeIntervalPeriod.YEARLY);
+        List<MonthlyTransactionDto> result =
+                offerTransactionService.getTransactionStatsForPeriod(TimeIntervalPeriod.YEARLY);
 
         // Then
         assertEquals(12, result.size());
 
-        assertEquals(500.0, result.stream().filter(m -> m.month() == 1).findFirst().orElseThrow().totalAmount());
-        assertEquals(800.0, result.stream().filter(m -> m.month() == 12).findFirst().orElseThrow().totalAmount());
+        assertEquals(500.0,
+                result.stream()
+                        .filter(m -> m.month() == 1)
+                        .findFirst()
+                        .orElseThrow()
+                        .totalAmount());
+        assertEquals(800.0,
+                result.stream()
+                        .filter(m -> m.month() == 12)
+                        .findFirst()
+                        .orElseThrow()
+                        .totalAmount());
 
         // All other months should have 0.0
         for (MonthlyTransactionDto dto : result) {
@@ -423,17 +504,24 @@ class OfferTransactionServiceImplTests {
         when(principalService.getUser()).thenReturn(user);
         when(principalService.getSupplierId()).thenReturn(supplierId);
 
-        MonthlyTransactionDto existingStat = new MonthlyTransactionDto(LocalDateTime.now().getMonthValue(), 200.0);
+        int currentMonth = LocalDateTime.now().getMonthValue();
+        double totalAmount = 200.0;
+
+        MonthlyTransactionView existingStat = mock(MonthlyTransactionView.class);
+        when(existingStat.getMonth()).thenReturn(currentMonth);
+        when(existingStat.getTotalAmount()).thenReturn(totalAmount);
+
         when(offerTransactionRepository.sumTransactionsByMonthAndSupplierIdSince(eq(supplierId), any(LocalDateTime.class)))
                 .thenReturn(List.of(existingStat));
 
         // When
-        List<MonthlyTransactionDto> result = offerTransactionService.getTransactionStatsForPeriod(TimeIntervalPeriod.MONTHLY);
+        List<MonthlyTransactionDto> result =
+                offerTransactionService.getTransactionStatsForPeriod(TimeIntervalPeriod.MONTHLY);
 
         // Then
         assertEquals(1, result.size());
-        assertEquals(existingStat.month(), result.get(0).month());
-        assertEquals(existingStat.totalAmount(), result.get(0).totalAmount());
+        assertEquals(existingStat.getMonth(), result.get(0).month());
+        assertEquals(existingStat.getTotalAmount(), result.get(0).totalAmount());
     }
 
     @Test
@@ -446,22 +534,28 @@ class OfferTransactionServiceImplTests {
                         .build())
                 .build();
         when(principalService.getSupplierId()).thenReturn(supplierId);
-
-        MonthlyTransactionDto transaction = new MonthlyTransactionDto(LocalDateTime.now().getMonthValue(), 150.0);
         when(principalService.getUser()).thenReturn(user);
+
+        int currentMonth = LocalDateTime.now().getMonthValue();
+
+        MonthlyTransactionView transaction = mock(MonthlyTransactionView.class);
+        when(transaction.getMonth()).thenReturn(currentMonth);
+        when(transaction.getTotalAmount()).thenReturn(150.0);
+
         when(offerTransactionRepository.sumTransactionsByMonthAndSupplierIdSince(eq(supplierId), any(LocalDateTime.class)))
                 .thenReturn(List.of(transaction));
 
         // When
-        List<MonthlyTransactionDto> result = offerTransactionService.getTransactionStatsForPeriod(TimeIntervalPeriod.QUARTERLY);
+        List<MonthlyTransactionDto> result =
+                offerTransactionService.getTransactionStatsForPeriod(TimeIntervalPeriod.QUARTERLY);
 
         // Then
         Set<Integer> quarterMonths = getExpectedQuarterMonths(LocalDateTime.now());
         assertEquals(quarterMonths.size(), result.size());
 
         for (MonthlyTransactionDto dto : result) {
-            if (dto.month().equals(transaction.month())) {
-                assertEquals(transaction.totalAmount(), dto.totalAmount());
+            if (dto.month().equals(transaction.getMonth())) {
+                assertEquals(transaction.getTotalAmount(), dto.totalAmount());
             } else {
                 assertEquals(0.0, dto.totalAmount());
             }
@@ -481,8 +575,14 @@ class OfferTransactionServiceImplTests {
         when(principalService.getUser()).thenReturn(user);
         when(principalService.getSupplierId()).thenReturn(supplierId);
 
-        MonthlyTransactionDto janTransaction = new MonthlyTransactionDto(1, 500.0);
-        MonthlyTransactionDto decTransaction = new MonthlyTransactionDto(12, 800.0);
+
+        MonthlyTransactionView janTransaction = mock(MonthlyTransactionView.class);
+        when(janTransaction.getMonth()).thenReturn(1);
+        when(janTransaction.getTotalAmount()).thenReturn(500.0);
+
+        MonthlyTransactionView decTransaction = mock(MonthlyTransactionView.class);
+        when(decTransaction.getMonth()).thenReturn(12);
+        when(decTransaction.getTotalAmount()).thenReturn(800.0);
 
         when(offerTransactionRepository.sumTransactionsByMonthAndSupplierIdSince(eq(supplierId), any(LocalDateTime.class)))
                 .thenReturn(List.of(janTransaction, decTransaction));
@@ -508,7 +608,7 @@ class OfferTransactionServiceImplTests {
     void GivenTenantId_WhenGetDistinctYearsForTransactionsByTenantId_ThenReturnDistinctYears() {
         // Given
         List<Integer> distinctYears = Arrays.asList(2022, 2023, 2024);
-        UUID tenantId = UUID.randomUUID();
+        UUID tenantId = UUID.fromString("8e3ea9e1-4bf7-4ad7-85d9-ce5c98439cdd");
 
         // When
         when(principalService.getTenantId()).thenReturn(tenantId);
@@ -523,68 +623,116 @@ class OfferTransactionServiceImplTests {
     @Test
     void GivenTenantId_WhenCountMonthYearTransactionsByTenantId_ThenReturnCorrectCount() {
         // Given
-        UUID tenantId = UUID.randomUUID();
-        int month = 6;
-        int year = 2024;
+        UUID tenantId = UUID.fromString("8e3ea9e1-4bf7-4ad7-85d9-ce5c98439cdd");
 
+        LocalDateTime startDate = LocalDateTime.of(2024, 6, 1, 0, 0);
+        LocalDateTime endDate = LocalDateTime.of(2024, 6, 30, 23, 59, 59);
+        LocalDate startDateN = LocalDate.of(2024, 6, 1);
+        LocalDate endDateN = LocalDate.of(2024, 6, 30);
         // When
         when(principalService.getTenantId()).thenReturn(tenantId);
-        when(offerTransactionRepository.countMonthYearTransactionsByTenantId(tenantId, month, year)).thenReturn(7);
+        when(offerTransactionRepository.countIntervalTransactionsByTenantId(eq(tenantId), any(LocalDateTime.class), any(LocalDateTime.class))).thenReturn(7);
 
         // Then
-        Integer result = offerTransactionService.countMonthYearTransactionsByTenantId(month, year);
+        Integer result = offerTransactionService.countIntervalTransactionsByTenantId(startDateN, endDateN);
         assertEquals(7, result);
-        verify(offerTransactionRepository, times(1)).countMonthYearTransactionsByTenantId(tenantId, month, year);
+        verify(offerTransactionRepository, times(1)).countIntervalTransactionsByTenantId(eq(tenantId), any(LocalDateTime.class), any(LocalDateTime.class));
     }
 
     @Test
     void GivenTenantIdAndDateRange_WhenGetTransactionsByMonthYearAndTenantId_ThenReturnTransactions() {
         // Given
-        UUID tenantId = UUID.randomUUID();
-        LocalDate startDate = LocalDate.of(2024, 9, 1);
-        LocalDate endDate = LocalDate.of(2024, 9, 30);
-        LocalDateTime endOfDay = endDate.atStartOfDay().plusDays(1).minusNanos(1);
-        List<OfferTransactionInvoiceTenantDto> transactions = Arrays.asList(
-                OfferTransactionInvoiceTenantDto.builder()
-                        .supplierIban("NL55INGB0001234567")
-                        .passNumber("PASS123")
-                        .amount(100.0)
-                        .acceptedBenefit("Benefit A")
-                        .createdDate("2024-09-05")
-                        .build()
-        );
+        UUID tenantId = UUID.fromString("8e3ea9e1-4bf7-4ad7-85d9-ce5c98439cdd");
+
+        LocalDateTime startDate = LocalDateTime.of(2024, 9, 1, 0, 0);
+        LocalDateTime endDate = LocalDateTime.of(2024, 9, 30, 23, 59, 59);
+
+        LocalDate startDateN = LocalDate.of(2024, 6, 1);
+        LocalDate endDateN = LocalDate.of(2024, 6, 30);
+
+        OfferTransactionInvoiceTenantView view = Mockito.mock(OfferTransactionInvoiceTenantView.class);
+
+        OfferTransaction offer = new OfferTransaction();
+        offer.setAmount(BigDecimal.valueOf(100.0));
+        offer.setCreatedDate(LocalDateTime.of(2024, 9, 5, 0, 0));
+
+        List<OfferTransactionInvoiceTenantView> transactions = List.of(view);
 
         // When
         when(principalService.getTenantId()).thenReturn(tenantId);
-        when(offerTransactionRepository.findTransactionsBetweenDatesByTenantId(tenantId, startDate.atStartOfDay(), endOfDay)).thenReturn(transactions);
+        when(offerTransactionRepository.findTransactionsBetweenDatesByTenantId(eq(tenantId), any(LocalDateTime.class), any(LocalDateTime.class))).thenReturn(transactions);
 
         // Then
-        List<OfferTransactionInvoiceTenantDto> result = offerTransactionService.getTransactionsByMonthYearAndTenantId(startDate, endDate);
+        List<OfferTransactionInvoiceTenantView> result = offerTransactionService.getTransactionsByIntervalAndTenantId(startDateN, endDateN);
         assertEquals(transactions, result);
-        verify(offerTransactionRepository, times(1)).findTransactionsBetweenDatesByTenantId(tenantId, startDate.atStartOfDay(), endOfDay);
+        verify(offerTransactionRepository, times(1)).findTransactionsBetweenDatesByTenantId(eq(tenantId), any(LocalDateTime.class), any(LocalDateTime.class));
     }
 
     @Test
-    void GivenTenantIdMonthYearPageable_WhenGetTransactionsByMonthYearAndTenantId_ThenReturnTransactions() {
+    void GivenTenantIdIntervalPageable_WhenGetTransactionsByIntervalAndTenantId_ThenReturnTransactions()
+            throws InvalidDateRangeException {
         // Given
-        UUID tenantId = UUID.randomUUID();
-        int month = 6;
-        int year = 2024;
+        UUID tenantId = UUID.fromString("8e3ea9e1-4bf7-4ad7-85d9-ce5c98439cdd");
+
+        LocalDate startDateN = LocalDate.of(2024, 6, 1);
+        LocalDate endDateN = LocalDate.of(2024, 6, 30);
+
         int page = 0;
         int size = 5;
         Pageable pageable = PageRequest.of(page, size);
-        List<OfferTransactionTenantTableDto> transactions = Arrays.asList(
-                new OfferTransactionTenantTableDto("12345", "John Doe", 100.0, "Supplier Name" , "Benefit","01/06/2024", "10:00")
-        );
+
+        // Mock projection returned by repository (MUST be OfferTransactionTenantTableView)
+        OfferTransactionTenantTableView transactionView = mock(OfferTransactionTenantTableView.class);
+        when(transactionView.getPassNumber()).thenReturn("12345");
+        when(transactionView.getCitizenName()).thenReturn("John Doe");
+        when(transactionView.getAmount()).thenReturn(BigDecimal.valueOf(100.0));
+        when(transactionView.getCreatedDate()).thenReturn("01/05/2023");
+        when(transactionView.getCreatedTime()).thenReturn("10:20");
+
+        List<OfferTransactionTenantTableView> transactions = List.of(transactionView);
 
         // When
         when(principalService.getTenantId()).thenReturn(tenantId);
-        when(offerTransactionRepository.findTransactionsByMonthYearAndTenantId(tenantId, month, year, pageable)).thenReturn(transactions);
+        when(offerTransactionRepository.findTransactionsByIntervalAndTenantId(
+                eq(tenantId),
+                any(LocalDateTime.class),
+                any(LocalDateTime.class),
+                eq(pageable)))
+                .thenReturn(transactions);
 
         // Then
-        List<OfferTransactionTenantTableDto> result = offerTransactionService.getTransactionsByMonthYearAndTenantId(month, year, page, size);
-        assertEquals(transactions, result);
-        verify(offerTransactionRepository, times(1)).findTransactionsByMonthYearAndTenantId(tenantId, month, year, pageable);
+        List<OfferTransactionTenantTableView> result =
+                offerTransactionService.getTransactionsByIntervalAndTenantId(
+                        startDateN, endDateN, page, size, null);
+
+        assertEquals(1, result.size());
+        OfferTransactionTenantTableView first = result.get(0);
+
+        assertEquals("12345", first.getPassNumber());
+        assertEquals("John Doe", first.getCitizenName());
+        assertEquals(BigDecimal.valueOf(100.0), first.getAmount());
+        assertEquals("01/05/2023", first.getCreatedDate());
+        assertEquals("10:20", first.getCreatedTime());
+
+        verify(offerTransactionRepository, times(1)).findTransactionsByIntervalAndTenantId(
+                eq(tenantId),
+                any(LocalDateTime.class),
+                any(LocalDateTime.class),
+                eq(pageable));
+    }
+
+    @Test
+    @SneakyThrows
+    public void GivenInvalidInterval_WhenGetTransactionsByIntervalAndTenantId_ThenShouldThrowInvalidDateRangeException() {
+        UUID tenantId = UUID.fromString("8e3ea9e1-4bf7-4ad7-85d9-ce5c98439cdd");
+
+        LocalDate endDateN = LocalDate.of(2024, 6, 1);
+        LocalDate startDateN = LocalDate.of(2024, 6, 30);
+
+        int page = 0;
+        int size = 5;
+        // When
+        assertThrows(InvalidDateRangeException.class, () -> offerTransactionService.getTransactionsByIntervalAndTenantId(startDateN, endDateN, page, size, null));
     }
 
     private Set<Integer> getExpectedQuarterMonths(LocalDateTime now) {
